force-app/main/default/objects/EPCI__c/EPCI__c.object-meta.xml
<CustomObject>
    <description>Établissements Publics de Coopération Intercommunale — enrichis depuis geo.api.gouv.fr</description>
    <label>EPCI</label>
    <nameField>
        <label>Nom EPCI</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EPCIs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>