force-app/main/default/objects/EPCI__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Compte</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EPCIs</relationshipLabel>
    <relationshipName>EPCIs</relationshipName>
    <type>Lookup</type>
</CustomField>