force-app/main/default/objects/EPCI__c/fields/Code_EPCI__c.field-meta.xml
<CustomField>
    <fullName>Code_EPCI__c</fullName>
    <description>Code EPCI (identique au SIREN, 9 chiffres) — utilisé comme clé externe pour l'upsert</description>
    <externalId>true</externalId>
    <label>Code EPCI</label>
    <length>9</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>