force-app/main/default/objects/EPCI__c/fields/Codes_Departements__c.field-meta.xml
<CustomField>
    <fullName>Codes_Departements__c</fullName>
    <label>Codes départements</label>
    <length>255</length>
    <type>Text</type>
</CustomField>