force-app/main/default/objects/EPCI__c/fields/Date_Enrichissement__c.field-meta.xml
<CustomField>
    <fullName>Date_Enrichissement__c</fullName>
    <label>Date d&apos;enrichissement</label>
    <type>DateTime</type>
</CustomField>