force-app/main/default/objects/EPCI__c/fields/Localisation__c.field-meta.xml
<CustomField>
    <fullName>Localisation__c</fullName>
    <label>Localisation</label>
    <scale>6</scale>
    <type>Location</type>
</CustomField>