force-app/main/default/objects/EPCI__c/fields/Nombre_Communes__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Communes__c</fullName>
    <label>Nombre de communes</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>