force-app/main/default/objects/EPCI__c/fields/Population_Totale__c.field-meta.xml
<CustomField>
    <fullName>Population_Totale__c</fullName>
    <label>Population totale</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>