force-app/main/default/objects/EPCI__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
                <default>true</default>
                <label>Prospect</label>
            </value>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>